--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ template {
   justify-content: space-between;
   color: #fff;
   padding: 30px 0;
+  margin: 0;
 }
 .navbar-menu__link {
   color: inherit;
