--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -21,6 +21,7 @@
     justify-content: space-between
     color: $light
     padding: 30px 0
+    margin: 0
     &__link
       color: inherit
       text-decoration: none
@@ -67,4 +68,3 @@
     color: $text-color
     font-size: 14px
     line-height: 18px
-  
