Create: breadcrumbs and hotel_name styles

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -43,6 +43,22 @@
       width: 16px
       height: 1px
       background-color: $text-color
+  .rating
+    display: none
+  .stars
+    flex-basis: content
+  .hotel
+    &-info
+      &__text
+        width: 100%
+      &__offer
+        order: -1
+        margin-left: 0
+    &-name 
+      flex-basis: 100%
+    &-wrapper
+      justify-content: space-between
+    
 @media (max-width: 576px)
   .logo
     width: 99px
