--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,9 @@
 @import 'normalize'
 // Стили для блока header
 @import 'templates/header'
+// Хлебные крошки
+@import 'templates/breadcrumb'
+// Стили блока Имени Отеля
+@import 'templates/hotel'
 // Подключение стилей адаптива
 @import 'media'
