--- a/sass/templates/_hotel.sass
+++ b/sass/templates/_hotel.sass
@@ -23,6 +23,10 @@
     display: flex
     flex-wrap: wrap
     align-items: center
+  &-grid
+    display: flex
+    align-items: flex-start
+    justify-content: space-between
 .stars
   flex-basis: 100%
 .offer
@@ -59,6 +63,7 @@
     bottom: 0
     left: 0
     right: 0
+    border: none
     border-radius: 8px
     background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.13) 100%)
     z-index: 10
@@ -84,3 +89,65 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-prev.svg)
+.booking
+  border-radius: 8px
+  width: 350px
+  min-height: 210px
+  padding: 28px
+  background-color: $dark
+  color: $light
+  font-family: Nunito, serif
+  &__info
+    display: flex
+    justify-content: space-between
+  &__price
+    display: flex
+    flex-direction: column
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    font-size: 12px
+    line-height: 16px
+  &__icon
+    width: 14px
+    height: 14px
+  &__description
+    margin-left: 9px
+  &__start
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-size: 24px
+    font-weight: 800
+    line-height: 33px
+  &__per-room
+    font-size: 12px
+    line-height: 16px
+    margin-bottom: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    font-size: 18px
+    line-height: 25px
+    font-weight: 600
+    margin-bottom: 17px
+  &__number
+    text-decoration: none
+    cursor: pointer
+  &__num
+    color: $light
+    margin-left: 8px
+  &__button
+    width: 100%
+    min-height: 45px
+    background-color: $primary
+    border: none
+    border-radius: 4px
+    color: $light
+    font-size: 14px
+    line-height: 19px
+    font-weight: 600
+    cursor: pointer
