--- a/sass/templates/_hotel.sass
+++ b/sass/templates/_hotel.sass
@@ -25,7 +25,10 @@
     align-items: center
   &-grid
     display: flex
-    align-items: flex-start
+    justify-content: space-between
+  &-right
+    display: flex
+    flex-direction: column
     justify-content: space-between
 .stars
   flex-basis: 100%
@@ -151,3 +154,8 @@
     line-height: 19px
     font-weight: 600
     cursor: pointer
+.map
+  width: 350px
+  height: 213px
+  background-color: #000
+  border-radius: 4px 
