--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,7 @@ template {
 
 .swiper-container {
   width: 100%;
-  height: 450px;
+  height: 100%;
   position: relative;
   border-radius: 8px;
 }
@@ -530,6 +530,7 @@ template {
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 .slider-button {
   position: absolute;
@@ -635,17 +636,27 @@ template {
   width: 350px;
   height: 213px;
   background-color: #000;
-  border-radius: 4px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
   }
+  .slider {
+    width: 590px;
+  }
+  .swiper-slide__image {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 @media (max-width: 992px) {
   .container {
-    max-width: 760px;
+    max-width: 700px;
   }
   .logo {
     width: 132px;
@@ -664,6 +675,28 @@ template {
     line-height: 15px;
   }
   .search__input {
+    width: 340px;
+  }
+  .hotel-grid {
+    flex-direction: column;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .hotel-right {
+    flex-direction: row;
+    width: 700px;
+  }
+  .slider {
+    width: 700px;
+  }
+  .swiper-slide {
+    width: 100%;
+  }
+  .swiper-slide__img {
+    width: 100%;
+  }
+  .booking, .map {
     width: 340px;
   }
 }
@@ -711,9 +744,29 @@ template {
   .hotel-wrapper {
     justify-content: space-between;
   }
+  .hotel-right {
+    flex-direction: column;
+    height: 450px;
+  }
+  .slider {
+    height: 350px;
+    width: 580px;
+  }
+  .booking {
+    width: 580px;
+  }
+  .map {
+    width: 580px;
+  }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .slider {
+    height: 250px;
+  }
+  .hotel__slider {
+    margin-bottom: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
