--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,9 +1,17 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper
+    &-slide
+      &__image
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media (max-width: 992px)
   .container
-    max-width: 760px
+    max-width: 700px
   .logo
     width: 132px
   .navbar
@@ -19,6 +27,22 @@
   .search
     &__input
       width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right 
+      flex-direction: row
+      width: 700px
+  .slider
+    width: 700px
+  .swiper-slide
+    width: 100%
+    &__img
+      width: 100%
+  .booking, .map
+    width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -58,7 +82,22 @@
       flex-basis: 100%
     &-wrapper
       justify-content: space-between
+    &-right
+      flex-direction: column
+      height: 450px
+  .slider
+    height: 350px
+    width: 580px
     
+  .booking
+    width: 580px
+  .map
+    width: 580px
 @media (max-width: 576px)
   .logo
     width: 99px
+  .slider
+    height: 250px
+  .hotel
+    &__slider
+      margin-bottom: 20px
