--- a/sass/templates/_hotel.sass
+++ b/sass/templates/_hotel.sass
@@ -54,7 +54,7 @@
     line-height: 18px
 .swiper-container 
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -72,6 +72,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button 
     position: absolute
     top: 50%
@@ -158,4 +159,5 @@
   width: 350px
   height: 213px
   background-color: #000
-  border-radius: 4px 
+  border-radius: 10px 
+  overflow: hidden
