Create: Newsletters section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'templates/breadcrumb'
 // Стили блока Имени Отеля
 @import 'templates/hotel'
+// Стили блока подписки
+@import 'templates/newsletter'
 // Подключение стилей адаптива
 @import 'media'
