--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
         height: 100%
         object-fit: cover
 @media (max-width: 992px)
-  .container
+  .container, .newsletter-wrapper
     max-width: 700px
   .logo
     width: 132px
@@ -88,11 +88,16 @@
   .slider
     height: 350px
     width: 580px
-    
   .booking
     width: 580px
   .map
     width: 580px
+  .newsletter
+    &-wrapper
+      flex-direction: column
+      align-items: flex-start
+      max-width: 576px
+      width: 92%
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -101,3 +106,13 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &-title
+      font-size: 20px
+      &__strong
+        font-size: 30px
+    &__title
+      margin-bottom: 37px
+  .subscribe
+    width: 100%
