Create: Reviews section

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,9 +8,11 @@
 @import 'templates/header'
 // Хлебные крошки
 @import 'templates/breadcrumb'
-// Стили блока Имени Отеля
+// Стили блока Отеля
 @import 'templates/hotel'
 // Стили блока подписки
 @import 'templates/newsletter'
+// Стили блока отзывов
+@import 'templates/reviews'
 // Подключение стилей адаптива
 @import 'media'
