--- a/css/style.css
+++ b/css/style.css
@@ -720,6 +720,113 @@ iframe {
   border: none;
 }
 
+.reviews {
+  padding: 40px 0 70px 0;
+}
+.reviews__title {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  text-align: center;
+  color: #333;
+  margin-bottom: 70px;
+}
+.reviews-slider__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 731px;
+  background-color: #fff;
+  margin: 45px auto 0;
+  padding: 0 62px 30px;
+}
+.reviews-slider__item::before {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 47px;
+  top: 13px;
+  left: 62px;
+  background-image: url(../img/quotes-left.svg);
+  background-repeat: no-repeat;
+}
+.reviews-slider__item::after {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 47px;
+  top: 118px;
+  right: 62px;
+  background-image: url(../img/quotes-right.svg);
+  background-repeat: no-repeat;
+}
+.reviews-slider__button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 99;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  padding: 0;
+}
+.reviews-slider__button--next {
+  right: 0;
+  background-image: url(../img/reviews-next.svg);
+}
+.reviews-slider__button--prev {
+  left: 0;
+  background-image: url(../img/reviews-prev.svg);
+}
+.reviews-slider__profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -45px;
+  margin-bottom: 32px;
+}
+.reviews-slider__avatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 9px;
+}
+.reviews-slider__username {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #EC1F46;
+  margin-bottom: 10px;
+}
+.reviews-slider__date {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #333;
+  margin-bottom: 5px;
+}
+.reviews-slider__text {
+  text-align: justify;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 19.2px;
+  color: #333;
+  padding: 0 35px 0;
+  margin: 0;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
