Create: responsive reviews section Fix: hotel-grid and search in head

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -35,14 +35,24 @@
     &-right 
       flex-direction: row
       width: 700px
-  .slider
-    width: 700px
-  .swiper-slide
-    width: 100%
+    &-slider
+      width: 700px
+      &__item
+        width: 100%
     &__img
       width: 100%
   .booking, .map
     width: 340px
+  .reviews
+    padding-bottom: 60px
+    &__title
+      font-size: 30px
+      margin-bottom: 50px
+    &-slider
+      &__item
+        width: 579px
+      &__text
+        width: 455px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -85,9 +95,9 @@
     &-right
       flex-direction: column
       height: 450px
-  .slider
-    height: 350px
-    width: 580px
+    &-slider
+      height: 350px
+      width: 580px
   .booking
     width: 580px
   .map
@@ -98,14 +108,44 @@
       align-items: flex-start
       max-width: 576px
       width: 92%
+  .reviews
+    padding-top: 20px
+    padding-bottom: 50px
+    &__title
+      font-size: 26px
+      margin-bottom: 40px
+    &-slider
+      &__item
+        width: 479px
+        &::before
+          left: 30px
+        &::after
+          right: 30px
+      &__profile
+        margin-bottom: 25px
+      &__avatar
+        margin-bottom: 5px
+      &__username
+        margin-bottom: 7px
+      &__date
+        margin-bottom: 3px
+      &__text
+        width: 350px
 @media (max-width: 576px)
   .logo
     width: 99px
-  .slider
-    height: 250px
   .hotel
+    &-slider
+      width: 450px
+      height: 250px
     &__slider
       margin-bottom: 20px
+    &-right
+      width: 450px
+  .booking
+    width: 450px
+  .map
+    width: 450px
   .newsletter
     padding: 76px 0 83px 0
     &-title
@@ -116,3 +156,24 @@
       margin-bottom: 37px
   .subscribe
     width: 100%
+  .reviews
+    &__title
+      margin: 0 30px 40px 30px
+    &-slider
+      &__item
+        width: 100%
+        padding: 0 0 30px 0
+        &::before
+          display: none
+        &::after
+          display: none
+      &__text
+        width: 225px
+      &__button
+        top: 45px
+        &--prev
+          left: 50%
+          margin-left: -95px
+        &--next
+          right: 50%
+          margin-right: -95px
