--- a/css/style.css
+++ b/css/style.css
@@ -740,7 +740,7 @@ iframe {
   position: relative;
   width: 731px;
   background-color: #fff;
-  margin: 45px auto 0;
+  margin: 45px auto 0 auto;
   padding: 0 62px 30px;
 }
 .reviews-slider__item::before {
@@ -818,12 +818,12 @@ iframe {
 }
 .reviews-slider__text {
   text-align: justify;
+  width: 537px;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 19.2px;
   color: #333;
-  padding: 0 35px 0;
   margin: 0;
 }
 
@@ -874,17 +874,30 @@ iframe {
     flex-direction: row;
     width: 700px;
   }
-  .slider {
+  .hotel-slider {
     width: 700px;
   }
-  .swiper-slide {
+  .hotel-slider__item {
     width: 100%;
   }
-  .swiper-slide__img {
+  .hotel__img {
     width: 100%;
   }
   .booking, .map {
     width: 340px;
+  }
+  .reviews {
+    padding-bottom: 60px;
+  }
+  .reviews__title {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+  .reviews-slider__item {
+    width: 579px;
+  }
+  .reviews-slider__text {
+    width: 455px;
   }
 }
 @media (max-width: 768px) {
@@ -935,7 +948,7 @@ iframe {
     flex-direction: column;
     height: 450px;
   }
-  .slider {
+  .hotel-slider {
     height: 350px;
     width: 580px;
   }
@@ -951,16 +964,58 @@ iframe {
     max-width: 576px;
     width: 92%;
   }
+  .reviews {
+    padding-top: 20px;
+    padding-bottom: 50px;
+  }
+  .reviews__title {
+    font-size: 26px;
+    margin-bottom: 40px;
+  }
+  .reviews-slider__item {
+    width: 479px;
+  }
+  .reviews-slider__item::before {
+    left: 30px;
+  }
+  .reviews-slider__item::after {
+    right: 30px;
+  }
+  .reviews-slider__profile {
+    margin-bottom: 25px;
+  }
+  .reviews-slider__avatar {
+    margin-bottom: 5px;
+  }
+  .reviews-slider__username {
+    margin-bottom: 7px;
+  }
+  .reviews-slider__date {
+    margin-bottom: 3px;
+  }
+  .reviews-slider__text {
+    width: 350px;
+  }
 }
 @media (max-width: 576px) {
   .logo {
     width: 99px;
   }
-  .slider {
+  .hotel-slider {
+    width: 450px;
     height: 250px;
   }
   .hotel__slider {
     margin-bottom: 20px;
+  }
+  .hotel-right {
+    width: 450px;
+  }
+  .booking {
+    width: 450px;
+  }
+  .map {
+    width: 450px;
   }
   .newsletter {
     padding: 76px 0 83px 0;
@@ -976,5 +1031,32 @@ iframe {
   }
   .subscribe {
     width: 100%;
+  }
+  .reviews__title {
+    margin: 0 30px 40px 30px;
+  }
+  .reviews-slider__item {
+    width: 100%;
+    padding: 0 0 30px 0;
+  }
+  .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__item::after {
+    display: none;
+  }
+  .reviews-slider__text {
+    width: 225px;
+  }
+  .reviews-slider__button {
+    top: 45px;
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    margin-left: -95px;
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    margin-right: -95px;
   }
 }/*# sourceMappingURL=style.css.map */
