--- a/sass/templates/_reviews.sass
+++ b/sass/templates/_reviews.sass
@@ -17,7 +17,7 @@
       position: relative
       width: 731px
       background-color: #fff
-      margin: 45px auto 0
+      margin: 45px auto 0 auto
       padding: 0 62px 30px
       &::before
         content: ''
@@ -84,10 +84,10 @@
       margin-bottom: 5px
     &__text
       text-align: justify
+      width: 537px
       font-size: 12px
       font-style: normal
       font-weight: 400
       line-height: 19.2px
       color: $text-color
-      padding: 0 35px 0
       margin: 0
