Create: activities section with media rules

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'templates/newsletter'
 // Стили блока отзывов
 @import 'templates/reviews'
+// Стили блока активностей
+@import 'templates/activities'
 // Подключение стилей адаптива
 @import 'media'
