--- a/css/style.css
+++ b/css/style.css
@@ -827,6 +827,80 @@ iframe {
   margin: 0;
 }
 
+.activities {
+  padding: 60px 0 100px 0;
+}
+.activities__title {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  color: #000;
+  margin-bottom: 57px;
+  margin-top: 0;
+}
+.activities-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 255px;
+  height: 255px;
+  border-radius: 6px;
+  overflow: hidden;
+  padding: 24px 26px;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  z-index: -1;
+}
+.card__image {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -2;
+}
+.card__text {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #fff;
+  margin-top: auto;
+  margin-bottom: 18px;
+}
+.card__button {
+  padding: 7px 22px;
+  background-color: #EC1F46;
+  color: #fff;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
@@ -839,6 +913,10 @@ iframe {
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+  .card {
+    width: 230px;
+    height: 230px;
   }
 }
 @media (max-width: 992px) {
@@ -898,6 +976,10 @@ iframe {
   }
   .reviews-slider__text {
     width: 455px;
+  }
+  .card {
+    margin-bottom: 20px;
+    width: 340px;
   }
 }
 @media (max-width: 768px) {
@@ -996,6 +1078,10 @@ iframe {
   .reviews-slider__text {
     width: 350px;
   }
+  .card {
+    width: 48%;
+    height: 255px;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -1058,5 +1144,15 @@ iframe {
   .reviews-slider__button--next {
     right: 50%;
     margin-right: -95px;
+  }
+  .card {
+    width: 100%;
+  }
+  .activities {
+    padding: 40px 0 60px 0;
+  }
+  .activities__title {
+    font-size: 18px;
+    margin-bottom: 36px;
   }
 }/*# sourceMappingURL=style.css.map */
