--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,9 @@
         width: 100%
         height: 100%
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 700px
@@ -53,6 +56,9 @@
         width: 579px
       &__text
         width: 455px
+  .card
+    margin-bottom: 20px
+    width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -131,6 +137,9 @@
         margin-bottom: 3px
       &__text
         width: 350px
+  .card
+    width: 48%
+    height: 255px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -177,3 +186,10 @@
         &--next
           right: 50%
           margin-right: -95px
+  .card
+    width: 100%
+  .activities
+    padding: 40px 0 60px 0
+    &__title
+      font-size: 18px
+      margin-bottom: 36px
