Create: footer with grid

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'templates/reviews'
 // Стили блока активностей
 @import 'templates/activities'
+// Стили блока подвал
+@import 'templates/footer'
 // Подключение стилей адаптива
 @import 'media'
