--- a/css/style.css
+++ b/css/style.css
@@ -901,6 +901,166 @@ iframe {
   cursor: pointer;
 }
 
+.footer {
+  background-color: #0A223D;
+  color: #fff;
+  padding: 108px 0 46px 0;
+}
+.footer-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-gap: 40px;
+  grid-auto-rows: minmax(40px, min-content);
+  align-items: start;
+  margin-bottom: 102px;
+}
+.footer__logo {
+  width: 166px;
+  grid-row: 1/3;
+  align-self: stretch;
+}
+.footer__categories {
+  grid-row: 1/3;
+}
+.footer__social-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: 83px;
+}
+.footer__social-network {
+  display: flex;
+  align-items: start;
+  grid-row: 2/3;
+  grid-column: span 2;
+}
+.footer__contact-details {
+  grid-column: span 2;
+}
+.footer__contact-form {
+  grid-column: span 2;
+}
+.footer__form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer__title {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.footer__title--inline {
+  margin: 0 43px 0 0;
+}
+.footer__title--mb-3 {
+  margin-bottom: 34px;
+}
+.footer__ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer__item {
+  display: flex;
+  align-items: flex-start;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  color: #BDBDBD;
+}
+.footer__item--mb-2 {
+  margin-bottom: 20px;
+}
+.footer__link {
+  text-decoration: none;
+  color: inherit;
+}
+.footer__text {
+  color: #BDBDBD;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+}
+.footer__icon-wrapper {
+  min-width: 40px;
+}
+.footer__input {
+  border-radius: 4px;
+  background-color: #fff;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+  margin-bottom: 15px;
+  flex-basis: 48%;
+  color: #BDBDBD;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer__message {
+  border-radius: 4px;
+  background-color: #fff;
+  border: none;
+  padding: 18px 23px;
+  flex-basis: 100%;
+  margin-bottom: 22px;
+  color: #BDBDBD;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 540px;
+  height: 123px;
+  resize: none;
+}
+.footer__button {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border-radius: 4px;
+  border: none;
+  padding: 18px;
+  min-width: 160px;
+  min-height: 50px;
+  color: #fff;
+  background-color: #EC1F46;
+}
+.footer__info {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #E0E0E0;
+}
+.footer-bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.footer-bottom__text {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  justify-self: center;
+  grid-column: 2/3;
+}
+.footer-bottom__image {
+  width: 136px;
+  height: 22px;
+  justify-self: end;
+  grid-column: 3/4;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
