--- a/css/style.css
+++ b/css/style.css
@@ -1141,6 +1141,60 @@ iframe {
     margin-bottom: 20px;
     width: 340px;
   }
+  .footer {
+    padding: 99px 0 85px 0;
+  }
+  .footer-wrapper {
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 30px;
+    margin-bottom: 66px;
+  }
+  .footer__logo {
+    width: 166px;
+    grid-row: 1/2;
+    grid-column: 1/3;
+    margin-bottom: 20px;
+  }
+  .footer__social-network {
+    grid-row: 1/2;
+    grid-column: span 4;
+    justify-self: end;
+    order: 4;
+  }
+  .footer__categories {
+    grid-row: 2/3;
+    grid-column: span 2;
+    margin-bottom: 20px;
+  }
+  .footer__additional {
+    grid-column: span 2;
+  }
+  .footer__legal {
+    grid-column: span 2;
+  }
+  .footer__contact-details {
+    grid-row: 3;
+    grid-column: 1/4;
+    margin-right: 50px;
+  }
+  .footer__contact-form {
+    grid-row: 3;
+    grid-column: 4/7;
+  }
+  .footer__input {
+    flex-basis: 100%;
+    padding: 0 15px;
+  }
+  .footer__message {
+    padding: 18px 15px;
+  }
+  .footer__button {
+    padding: 15px;
+  }
+  .footer-bottom__text {
+    justify-self: start;
+    grid-column: 1/3;
+  }
 }
 @media (max-width: 768px) {
   .container {
@@ -1242,6 +1296,60 @@ iframe {
     width: 48%;
     height: 255px;
   }
+  .footer {
+    padding: 54px 45px 65px 30px;
+  }
+  .footer-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .footer__logo {
+    grid-row: 1;
+    grid-column: 1;
+    width: 140px;
+  }
+  .footer__social-network {
+    grid-row: 2;
+    grid-column: 1;
+    justify-self: start;
+  }
+  .footer__categories {
+    grid-row: 3;
+    grid-column: 1;
+  }
+  .footer__additional {
+    grid-row: 4;
+    grid-column: 1;
+  }
+  .footer__legal {
+    grid-row: 5;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    grid-row: 6;
+    grid-column: 1;
+    flex-basis: 100%;
+    margin-right: 0;
+  }
+  .footer__contact-form {
+    grid-row: 7;
+    grid-column: 1;
+  }
+  .footer__button {
+    flex-basis: 100%;
+  }
+  .footer-bottom {
+    grid-template-columns: 1fr;
+    grid-gap: 14px;
+  }
+  .footer-bottom__text {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .footer-bottom__image {
+    grid-row: 2;
+    grid-column: 1;
+    justify-self: start;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -1314,5 +1422,8 @@ iframe {
   .activities__title {
     font-size: 18px;
     margin-bottom: 36px;
+  }
+  .footer__form {
+    width: 450px;
   }
 }/*# sourceMappingURL=style.css.map */
