--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -59,6 +59,50 @@
   .card
     margin-bottom: 20px
     width: 340px
+  .footer
+    padding: 99px 0 85px 0
+    &-wrapper 
+      grid-template-columns: repeat(6, 1fr)
+      grid-gap: 30px
+      margin-bottom: 66px
+    &__logo
+      width: 166px
+      grid-row: 1 / 2
+      grid-column: 1 / 3
+      margin-bottom: 20px
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        justify-self: end
+        order: 4
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+      margin-bottom: 20px
+    &__additional
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: 1 / 4
+        margin-right: 50px
+      &-form
+        grid-row: 3
+        grid-column: 4 / 7
+    &__input
+      flex-basis: 100%
+      padding: 0 15px
+    &__message
+      padding: 18px 15px
+    &__button
+      padding: 15px
+    &-bottom
+      &__text
+        justify-self: start
+        grid-column: 1 / 3
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -140,6 +184,49 @@
   .card
     width: 48%
     height: 255px
+  .footer
+    padding: 54px 45px 65px 30px
+    &-wrapper 
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+      width: 140px
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+        justify-self: start
+    &__categories
+      grid-row: 3
+      grid-column: 1
+    &__additional
+      grid-row: 4
+      grid-column: 1
+    &__legal
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+        flex-basis: 100%
+        margin-right: 0
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__button
+      flex-basis: 100%
+    &-bottom
+      grid-template-columns: 1fr
+      grid-gap: 14px
+      &__text
+        grid-row: 1
+        grid-column: 1
+      &__image
+        grid-row: 2
+        grid-column: 1
+        justify-self: start
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -193,3 +280,6 @@
     &__title
       font-size: 18px
       margin-bottom: 36px
+  .footer
+    &__form
+      width: 450px
