--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -107,9 +107,42 @@
   .container
     max-width: 576px
     width: 92%
+  body
+    padding-top: 78px
   .navbar
-    &__search, &__user, &-menu
-      display: none
+    &--mobile
+      &--fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
+    &-bottom
+      display: none 
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 30px
+      &--visible
+        display: block
+    &-menu
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &--mobile
+          &--visible
+            display: block
+    &__user, &__search
+      &--mobile
+        &--hidden
+          display: none
+        &--visible
+          display: flex
+    &__user
+      flex-direction: column 
+      justify-content: center
     &-top
       &__menu-button
         display: flex
@@ -122,6 +155,13 @@
         border: none
         background-color: #fff
         cursor: pointer
+  .user
+    &__name
+      &--light
+        color: $light
+        margin-left: 0
+        margin-top: 10px
+        margin-bottom: 25px
   .menu-button
     &__line
       width: 16px
