Create: add modal window

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'templates/activities'
 // Стили блока подвал
 @import 'templates/footer'
+// Стили модальных окон
+@import 'templates/modal'
 // Подключение стилей адаптива
 @import 'media'
