--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,35 @@ img {
   max-width: 100%;
 }
 
+.input {
+  border-radius: 4px;
+  background-color: #fff;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  border-radius: 4px;
+  background-color: #fff;
+  border: none;
+  padding: 18px 23px;
+}
+
+.button {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border-radius: 4px;
+  border: none;
+  padding: 18px;
+  min-width: 160px;
+  min-height: 50px;
+  color: #fff;
+  background-color: #EC1F46;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -996,11 +1025,6 @@ iframe {
   min-width: 40px;
 }
 .footer__input {
-  border-radius: 4px;
-  background-color: #fff;
-  border: none;
-  padding: 0 23px;
-  height: 50px;
   margin-bottom: 15px;
   flex-basis: 48%;
   color: #BDBDBD;
@@ -1010,10 +1034,6 @@ iframe {
   line-height: normal;
 }
 .footer__message {
-  border-radius: 4px;
-  background-color: #fff;
-  border: none;
-  padding: 18px 23px;
   flex-basis: 100%;
   margin-bottom: 22px;
   color: #BDBDBD;
@@ -1024,19 +1044,6 @@ iframe {
   width: 540px;
   height: 123px;
   resize: none;
-}
-.footer__button {
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  border-radius: 4px;
-  border: none;
-  padding: 18px;
-  min-width: 160px;
-  min-height: 50px;
-  color: #fff;
-  background-color: #EC1F46;
 }
 .footer__info {
   font-size: 12px;
@@ -1062,6 +1069,79 @@ iframe {
   height: 22px;
   justify-self: end;
   grid-column: 3/4;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.modal__overlay--active {
+  visibility: visible;
+  opacity: 1;
+}
+.modal__dialog {
+  position: fixed;
+  max-width: 478px;
+  padding: 33px 88px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  background-color: #0A223D;
+  color: #fff;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.modal__dialog--active {
+  visibility: visible;
+  opacity: 1;
+}
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 17px;
+}
+.modal__form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.modal__message {
+  width: 100%;
+  height: 123px;
+  margin-bottom: 15px;
+}
+.modal__title {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  text-align: center;
+}
+.modal__info {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #E0E0E0;
 }
 
 @media (max-width: 1200px) {
