--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -103,6 +103,10 @@
       &__text
         justify-self: start
         grid-column: 1 / 3
+  .modal
+    &__dialog
+      width: 80%
+      padding: 33px 75px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -267,6 +271,10 @@
         grid-row: 2
         grid-column: 1
         justify-self: start
+  .modal
+    &__dialog
+      width: 90%
+      padding: 33px 65px
 @media (max-width: 576px)
   .logo
     width: 99px
@@ -323,3 +331,6 @@
   .footer
     &__form
       width: 450px
+  .modal
+    &__dialog
+      padding: 30px 50px
