Create: form validation

--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -75,13 +75,15 @@
     &-wrapper 
       min-width: 40px
   &__input
-    margin-bottom: 15px
-    flex-basis: 48%
-    color: $footer-text-color
-    font-size: 12px
-    font-style: normal
-    font-weight: 400
-    line-height: normal
+    width: 100%
+    &-group
+      margin-bottom: 15px
+      flex-basis: 48%
+      color: $footer-text-color
+      font-size: 12px
+      font-style: normal
+      font-weight: 400
+      line-height: normal
   &__message
     flex-basis: 100%
     margin-bottom: 22px
