--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@ img {
   min-height: 50px;
   color: #fff;
   background-color: #EC1F46;
+  cursor: pointer;
+}
+
+.invalid {
+  color: #EC1F46;
+  border-bottom: 1px solid #EC1F46;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -1025,6 +1031,9 @@ iframe {
   min-width: 40px;
 }
 .footer__input {
+  width: 100%;
+}
+.footer__input-group {
   margin-bottom: 15px;
   flex-basis: 48%;
   color: #BDBDBD;
@@ -1119,12 +1128,12 @@ iframe {
 }
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 .modal__message {
   width: 100%;
   height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 .modal__title {
   margin-top: 0;
@@ -1142,6 +1151,9 @@ iframe {
   font-weight: 700;
   line-height: normal;
   color: #E0E0E0;
+}
+.modal__button {
+  margin-top: 15px;
 }
 
 @media (max-width: 1200px) {
@@ -1265,8 +1277,10 @@ iframe {
     grid-column: 4/7;
   }
   .footer__input {
+    width: 100%;
+  }
+  .footer__input-group {
     flex-basis: 100%;
-    padding: 0 15px;
   }
   .footer__message {
     padding: 18px 15px;
