--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -93,8 +93,9 @@
         grid-row: 3
         grid-column: 4 / 7
     &__input
-      flex-basis: 100%
-      padding: 0 15px
+      width: 100%
+      &-group
+        flex-basis: 100%
     &__message
       padding: 18px 15px
     &__button
