--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -32,3 +32,7 @@ img
   min-height: 50px
   color: $light
   background-color: $primary  
+  cursor: pointer
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary
