--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -41,11 +41,11 @@
     flex-wrap: wrap
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
   &__message
     width: 100%
     height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
   &__title
     margin-top: 0
     margin-bottom: 16px
@@ -61,3 +61,5 @@
     font-weight: 700
     line-height: normal
     color: #E0E0E0
+  &__button
+    margin-top: 15px
